--- a/main.html
+++ b/main.html
@@ -7,8 +7,77 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <!-- style="width: 100%; height: 100%" -->
+    <table border="1" cellspacing="0" >
       <!-- Your code here -->
+      <!-- two rows of the table -->
+      <tr>
+        <!-- row 1 column 1 -->
+        <td> 
+           <table border="1" align="centre" cellspacing="0">
+            <tr>
+              <th colspan="2">Nested Table 2</th>
+            </tr>
+            <tr>
+              <th>Column 1</th>
+              <th>Column 2</th>
+            </tr>
+            <tr>
+              <td>abc</td>
+              <td>def</td>
+            </tr>
+           </table>
+        </td>
+        <!-- row 1 column2 -->
+        <td>
+          <table  border = "1" align="centre"cellspacing = "0" >
+            <tr>
+              <th>Nested Table 1</th>
+            </tr>
+            <tr>
+              <td>
+                <ul>
+                  <li>List item</li>
+                  <li>list item</li>
+                  <li>List item</li>
+                </ul>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+      <!-- row 2 -->
+      <tr>
+        <!-- row 2 column 1 -->
+        <td>
+          <table  border = "1" align="centre" cellspacing = "0" >
+            <tr>
+              <th colspan="2">Nested Table 3</th>
+            </tr>
+            <tr>
+              <td>
+                 <a href="#">
+                  Nested Table</td>
+                </a> 
+              </td>
+              <td>Demo Continued</td>
+            </tr>
+          </table>
+        </td>
+        <!-- row 2 column 2 -->
+        <td>
+            <table  border = "1" align="centre" cellspacing = "0" >
+              <tr>
+                <th>Nested Table 4</th>
+              </tr>
+              <tr>
+                <td style="background-color: black;color: white;">
+                  HTML
+                </td>
+              </tr>
+            </table>
+        </td>
+      </tr>
     </table>
   </body>
 </html>
