--- a/main.html
+++ b/main.html
@@ -37,9 +37,9 @@
             <tr>
               <td>
                 <ul>
-                  <li>List item</li>
-                  <li>list item</li>
-                  <li>List item</li>
+                  <li>List item 1</li>
+                  <li>list item 1</li>
+                  <li>List item 1</li>
                 </ul>
               </td>
             </tr>
